@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.p2p-streams"
        name="p2p-streams"
-       version="0.4.6"
+       version="0.4.7"
        provider-name="enen92 - fightnight">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
